--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,12 @@ flask
 flask_restful
 flask-httpauth
 flask-sqlalchemy
-flask-script
-flask-migrate
+flask-script==2.0.5
+flask-migrate==2.6.0
 flask-testing
 itsdangerous
 werkzeug
 psycopg2-binary
 pyhocon
 gunicorn
+related
