Added AuthManager and login endpoint

--- a/resources/config/app/application.conf
+++ b/resources/config/app/application.conf
@@ -9,3 +9,10 @@ database {
   user_name = "" # override by env
   password = "" # override securely
 }
+
+auth {
+  cookie_name = "auth-session"
+  token {
+    duration = 7200 # Two hours
+  }
+}
