--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ flask-sqlalchemy
 flask-script==2.0.5
 flask-migrate==2.6.0
 flask-testing
-itsdangerous
+itsdangerous==1.1.0
 werkzeug
 psycopg2-binary
 pyhocon
